--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.2",
+    "@prisma/adapter-libsql": "^6.5.0",
+    "@prisma/client": "6.5.0",
+    "bcryptjs": "^3.0.2",
+    "clsx": "^2.1.1",
     "next": "15.2.4",
     "next-auth": "5.0.0-beta.25",
     "react": "^19.0.0",
@@ -22,6 +27,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
+    "prisma": "^6.5.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
