Add dayjs dependency for date manipulation in the project

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@libsql/client": "^0.15.2",
     "@prisma/adapter-libsql": "^6.5.0",
     "@prisma/client": "6.5.0",
+    "@tanstack/react-table": "^8.21.3",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "next": "15.2.4",
     "next-auth": "5.0.0-beta.25",
     "react": "^19.0.0",
